--- a/styles/mygallery.css
+++ b/styles/mygallery.css
@@ -62,7 +62,26 @@
   flex-direction: column;
 }
 
-
+.galleryAdmin {
+  text-align: center;
+  transition: 0.25s;
+  width: 150px;
+  padding: 10px;
+  outline: none;
+  border-radius: 24px;
+  border: 1px solid rgb(51, 63, 62);
+  background: transparent;
+  color: rgb(51, 63, 62);
+  font-weight: bold;
+  margin-top: 30px;
+}
+.galleryAdmin:hover {
+  background: rgb(51, 63, 62);
+  color: white;
+  cursor: pointer;
+  border: 1px solid rgb(51, 63, 62);
+  transform: scaleX(1.2) scaleY(1.2);
+}
 
 .row {
   display: flex;
